page prototype and updates

--- a/battleship.html
+++ b/battleship.html
@@ -3,8 +3,7 @@
 	</head>
 	
 	<body>
-		<canvas id="myCanvas" width="150" height="150">
-		</canvas>
+		<canvas id="myCanvas" width="1300" height="500" ></canvas>
 		<script src="targets.js"></script>
 		<script src="battleship.js"></script>
 		<script src="player.js"></script>
